stateDiagram-v2
    [*] --> IDLE
    
    IDLE --> CLASSIC_STATE : timed
    
    CLASSIC_STATE --> INITSINGLE : buttonPressed
    CLASSIC_STATE --> LOWBATTERY : lowbattery
    
    INITSINGLE --> WAITFORTHROW : timed
    INITSINGLE --> LOWBATTERY : lowbattery
    
    INITENTANGLED_AB1 --> WAITFORTHROW : timed
    INITENTANGLED_AB1 --> LOWBATTERY : lowbattery
    
    INITENTANGLED_AB2 --> LOWBATTERY : lowbattery
    
    WAITFORTHROW --> INITSINGLE : buttonPressed
    WAITFORTHROW --> INITSINGLE : timed
    WAITFORTHROW --> INITENTANGLED_AB1 : closeByAB1
    WAITFORTHROW --> THROWING : startRolling
    WAITFORTHROW --> LOWBATTERY : lowbattery
    
    THROWING --> INITMEASURED : nonMoving
    THROWING --> LOWBATTERY : lowbattery
    
    INITMEASURED --> WAITFORTHROW : measureXYZ
    INITMEASURED --> THROWING : measurementFail
    INITMEASURED --> LOWBATTERY : lowbattery
    
    LOWBATTERY --> LOWBATTERY : stays in low battery state
    
    note right of IDLE
        Initial startup state
    end note
    
    note right of CLASSIC_STATE
        Classic dice mode
        DiceState: CLASSIC
    end note
    
    note right of INITSINGLE
        Initialize single dice mode
        DiceState: SINGLE
    end note
    
    note right of INITENTANGLED_AB1
        Initialize entanglement mode
        Device A with B1
        DiceState: ENTANGLED_AB1
    end note
    
    note right of INITENTANGLED_AB2
        Initialize entanglement mode
        Device A with B2
        DiceState: ENTANGLED_AB2
    end note
    
    note right of WAITFORTHROW
        Ready and waiting for dice throw
        Monitors for rolling start
    end note
    
    note right of THROWING
        Dice is being thrown
        Monitors IMU for movement
    end note
    
    note right of INITMEASURED
        Measurement phase
        Determines orientation (X/Y/Z axis)
        Calculates dice number (1-6)
        Sets DiceState: MEASURED
    end note
    
    note right of LOWBATTERY
        Low battery protection mode
        Resets dice state
    end note
